# desafio_alfaneo

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
desafio_alfaneo/scraper/: app.py  web_scraper.py
scraper/: app.py  models.py  web_scraper.py
tests/: test_app.py
