[project]
name = "desafio-alfaneo"
version = "0.1.0"
description = ""
authors = [
    {name = "Maria Alice",email = "nantesmalice@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, < 4.0"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
