[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Maria Alice",email = "nantesmalice@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, < 4.0"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pytesseract (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.2"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'